<resources>
    <string name="app_name">QuizApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-In</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_out">Sign-Out</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="title">Title</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="browse_quizzes">Browse Quizzes</string>
</resources>